--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack -w"
+    "start": "start http://localhost:8080/webpack-dev-server/index.html & webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
