--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 node_modules
+dist/index
+dist/vtour
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
