--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@types/jquery": "^3.2.16",
+    "jquery": "^3.2.1",
+    "mdbootstrap": "^4.4.3"
+  },
   "devDependencies": {
     "awesome-typescript-loader": "^3.4.1",
     "source-map-loader": "^0.2.3",
