--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+#unignored node modules
+!node_modules/mdbootstrap/*
+!node_modules/jquery/*
