--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/jquery": "^3.2.16",
+    "@types/slideout": "^0.1.19",
     "jquery": "^3.2.1",
     "marzipano": "^0.6.0",
-    "mdbootstrap": "^4.4.3"
+    "mdbootstrap": "^4.4.3",
+    "slideout": "^1.0.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.4.1",
