--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "start http://localhost:8080/webpack-dev-server/index.html & webpack-dev-server",
+    "start-index": "start http://localhost:8080/webpack-dev-server/index.html & webpack-dev-server",
+    "start-vtour": "start http://localhost:8080/webpack-dev-server/vtour.html & webpack-dev-server",
     "build": "webpack",
     "autobuild": "webpack -w"
   },
