--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/jquery": "^3.2.16",
     "jquery": "^3.2.1",
     "marzipano": "^0.6.0",
-    "mdbootstrap": "^4.4.3"
+    "mdbootstrap": "^4.4.3",
+    "svg-pan-zoom-rotate": "0.0.4"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.4.1",
