--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,9 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": false,
+    "allowSyntheticDefaultImports": true,
     "module": "commonjs",
-    "target": "es2016",
+    "target": "es2017",
     "jsx": "react",
     "allowJs": true
   },
