--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "marzipano": "^0.6.0",
     "mdbootstrap": "^4.4.3",
     "svg-pan-zoom": "^3.5.3",
+    "svg.js": "^2.6.3",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
